--- a/css/main.css
+++ b/css/main.css
@@ -592,6 +592,10 @@ button:focus {
   color: #fff;
 }
 
+.navbar-brand img {
+  size: 20px;
+}
+
 .navbar-expand-md .navbar-nav .nav-link:focus,
 .navbar-expand-md .navbar-nav .nav-link:hover,
 .navbar-expand-md .navbar-nav .nav-link:hover:before {
