--- a/css/responsive.css
+++ b/css/responsive.css
@@ -184,9 +184,16 @@
     padding: 0;
   }
   .bg-inverse {
-    background: black;
+    background: linear-gradient(to right, #3c96ff 0%, #2dfbff 100%);
   }
 
+  .bg-inverse button {
+    background: #2dfbff !important;
+  }
+
+  .bg-inverse li {
+    background: linear-gradient(to right, #3c96ff 0%, #2dfbff 100%);
+  }
   .navbar-expand-md .navbar-brand,
   .navbar-expand-md .navbar-toggler {
     margin: 6px 15px;
